# apps/gateway/src/modules/billing/dto/webhook.req.dto.ts
@@ -1,0 +1,16 @@
+import { IsNumber, IsString } from 'class-validator';
+
+export class WebhookRequestDto {
+  @IsString({ message: 'invalid data' })
+  data: string;
+
+  @IsString({ message: 'invalid mac' })
+  mac: string;
+
+  /** 1: Order, 2: Agreement */
+  @IsNumber(
+    { allowNaN: false, allowInfinity: false },
+    { message: 'invalid type' },
+  )
+  type: number;
+}
